--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,19 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
     - tools
     - build-tools-23.0.2
     - android-23
     - extra-android-m2repository
 
-    # Additional components
-    # - extra-google-google_play_services
-    # - extra-google-m2repository
-    # - extra-android-m2repository
-    # - addon-google_apis-google-19
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-19
-    # - sys-img-x86-android-17
+before_script: cd opencorpora
 
 script: gradle build
 
 before_cache:
-    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+    - rm -f $HOME/opencorpora/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
+    - $HOME/opencorpora/.gradle/caches/
+    - $HOME/opencorpora/.gradle/wrapper/
