--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.opencorpora"
-    android:versionCode="1"
-    android:versionName="1.0.0" >
+    android:versionCode="0"
+    android:versionName="0.1.0" >
 
-    <application android:label="@string/app_name" >
+    <uses-sdk android:minSdkVersion="16"
+        android:targetSdkVersion="23" />
+
+    <application android:label="@string/app_name"
+                 android:allowBackup="true">
         <activity
             android:name=".OpenCorporaActivity"
             android:label="@string/app_name" >
