--- a/opencorpora/build.gradle
+++ b/opencorpora/build.gradle
@@ -13,6 +13,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+
+    lintOptions {
+        warningsAsErrors true
+        textReport true
+        textOutput "stdout"
+        xmlReport false
+        htmlReport false
+    }
 }
 
 repositories {
