--- a/opencorpora/build.gradle
+++ b/opencorpora/build.gradle
@@ -15,6 +15,8 @@ android {
     buildToolsVersion "23.0.2"
 
     lintOptions {
+        disable 'MissingApplicationIcon'
+
         warningsAsErrors true
         textReport true
         textOutput "stdout"
