--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="23" />
 
     <application android:label="@string/app_name"
-                 android:allowBackup="true">
+                 android:allowBackup="false" >
         <activity
             android:name=".OpenCorporaActivity"
             android:label="@string/app_name" >
