--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
 
 after_success:
   - cd ..
-  - "[ \"$TRAVIS_BRANCH\" = 'master' ] && ./share_debug_apk.sh"
+  - "[ \"$TRAVIS_BRANCH\" = 'master' -a \"$TRAVIS_PULL_REQUEST\" = 'false' ] \
+        && ./share_debug_apk.sh"
 
 before_cache:
   - rm -f $HOME/opencorpora/.gradle/caches/modules-2/modules-2.lock
