--- a/opencorpora/build.gradle
+++ b/opencorpora/build.gradle
@@ -23,6 +23,18 @@ android {
         xmlReport false
         htmlReport false
     }
+
+    buildTypes {
+        release {
+            buildConfigField "String", "server_address", '"http://opencorpora.org/"'
+            debuggable false
+        }
+
+        debug {
+            buildConfigField "String", "server_address", '"http://private-e2e8fe-opencorporaapi.apiary-mock.com/"'
+            debuggable true
+        }
+    }
 }
 
 repositories {
