--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -4,22 +4,31 @@
     android:versionCode="0"
     android:versionName="0.1.0" >
 
-    <uses-sdk android:minSdkVersion="16"
+    <uses-sdk
+        android:minSdkVersion="16"
         android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application android:label="@string/app_name"
-                 android:allowBackup="false" >
+    <application
+        android:allowBackup="false"
+        android:label="@string/app_name" >
         <activity
             android:name=".OpenCorporaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".ApiService"
+            android:enabled="true"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
