--- a/opencorpora/build.gradle
+++ b/opencorpora/build.gradle
@@ -41,6 +41,10 @@ repositories {
     jcenter()
 }
 
+dependencies {
+    compile 'com.loopj.android:android-async-http:1.4.9'
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
