fix lint warnings

--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/LoginActivityLabel" >аш
+        </activity>
+
         <service
             android:name=".AuthService"
             android:enabled="true"
