--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -8,12 +8,23 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="23" />
 
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
         android:allowBackup="false"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Holo" >
         <activity
             android:name=".OpenCorporaActivity"
             android:label="@string/app_name" >
@@ -25,14 +36,24 @@
         </activity>
 
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/LoginActivityLabel" >аш
+            android:name=".authenticator.AuthenticatorActivity"
+            android:label="@string/title_activity_authenticator" >
         </activity>
 
         <service
-            android:name=".AuthService"
+            android:name=".authenticator.AuthService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
+        <service
+            android:name=".authenticator.AuthenticatorService"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
         </service>
     </application>
 
