--- a/opencorpora/src/main/AndroidManifest.xml
+++ b/opencorpora/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
     <application
         android:allowBackup="false"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:icon="@mipmap/ic_launcher"
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name=".OpenCorporaActivity"
             android:label="@string/app_name" >
