--- a/opencorpora/build.gradle
+++ b/opencorpora/build.gradle
@@ -43,6 +43,8 @@ repositories {
 
 dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.17'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'
 }
 
 task wrapper(type: Wrapper) {
